# ai-study-library

./: CLAUDE.md  README.md
.claude/: settings.json
graphify-out/: GRAPH_REPORT.md  README.md  cost.json  graph.html  graph.json  manifest.json
tools/harness-kb/: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
tools/harness-kb/docs/: architecture.md  build.md  claude-md-injection.md  cli-reference.md  mcp-reference.md
tools/harness-kb/src/harness_kb/: __main__.py  chunking.py  cli.py  docs.py  graph.py  guide.py  init.py  manifest.py  mcp.py  search.py  wiki.py
tools/harness-kb/src/harness_kb/data/: manifest.json
tools/harness-kb/src/harness_kb/data/guide/: harness-engineering-playbook.md
tools/harness-kb/src/harness_kb/data/index/: bm25_index.pkl  chunks.json
tools/harness-kb/src/harness_kb/data/wiki/: AGENTS.md_Efficacy_Research.md  Agent_Skills_Standard.md  Commercial_Context_Systems.md  Cursor_Agent_Tooling.md  Cursor_IDE_Official_Documentation_README.md  Cursor_Subagents_Guide.md  Documentation_Index.md  Human-Agent_Collaboration.md  JSON_Schema_Behavior.md  Lost_in_the_Middle_(Liu_et_al.,_TACL_2024).md  Progressive_Disclosure_(Skills_Context_Management).md  Prompting_Techniques.md  Refusal_Edge_Case.md  SDD_Tools_&_Levels.md  SKILL.md_Format_(Frontmatter_+_Markdown_Body).md  Spec-Driven_Development.md
tools/harness-kb/tests/: test_adapt_guide.py  test_build.py  test_chunking.py  test_cli.py  test_docs.py  test_graph.py  test_guide.py  test_init.py  test_manifest.py  test_mcp.py  test_playbook_queries.py  test_search.py  test_wiki.py
(+57 files in other folders)
