[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "harness-kb"
version = "0.1.0"
description = "Portable knowledge base of agent / harness / context-engineering reference material."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Rodrigo França", email = "rodrigo_rjsf@hotmail.com"}]
dependencies = [
    "click>=8.1,<9",
    "networkx>=3.2,<4",
    "rank-bm25>=0.2.2,<0.3",
    "mcp>=1.0,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
    "pytest-cov>=4.1,<5",
]

[project.scripts]
harness-kb = "harness_kb.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
harness_kb = ["data/**/*", "data/**/.gitkeep"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
